// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeEditor: reducer change contract name 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "contractName": "Cloner",
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "sourceCode": undefined,
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer change create action state 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "sourceCode": "abc",
  "tab": Array [
    Object {
      "text": "abc",
      "title": "Main.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer change file name 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "fileName": "New file name",
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "sourceCode": undefined,
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer compile code failure 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": false,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "error": "src:6:77: Error: Expected token Semicolon got 'RBrace'
{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }
                                                                            ^
",
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "response": " { Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }                                                                             ^",
  "sourceCode": undefined,
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer compile code request 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "codeType": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "response": "Uploading Contract...",
  "sourceCode": undefined,
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer compile code success 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": true,
  "contractName": "Cloner",
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": true,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "response": Object {
    "src": Object {
      "Cloner": Object {
        "funcs": Object {
          "cloneSheep": Object {
            "args": Object {
              "name": Object {
                "dynamic": true,
                "index": 0,
                "type": "String",
              },
            },
            "selector": "0072c6a9",
            "vals": Object {
              "#0": Object {
                "index": 0,
                "type": "Address",
              },
            },
          },
        },
        "vars": Object {
          "clones": Object {
            "atBytes": 0,
            "dynamic": true,
            "entry": Object {
              "typedef": "Sheep",
            },
            "public": true,
            "type": "Array",
          },
          "sheepDNA": Object {
            "atBytes": 32,
            "dynamic": true,
            "public": true,
            "type": "String",
          },
        },
      },
      "Sheep": Object {
        "constr": Object {
          "_dna": Object {
            "dynamic": true,
            "index": 1,
            "type": "String",
          },
          "_name": Object {
            "dynamic": true,
            "index": 0,
            "type": "String",
          },
        },
        "funcs": Object {
          "geneticallyModify": Object {
            "args": Object {
              "_dna": Object {
                "dynamic": true,
                "index": 0,
                "type": "String",
              },
            },
            "selector": "0e3668f8",
            "vals": Object {},
          },
        },
        "vars": Object {
          "dna": Object {
            "atBytes": 32,
            "dynamic": true,
            "public": true,
            "type": "String",
          },
          "name": Object {
            "atBytes": 0,
            "dynamic": true,
            "public": true,
            "type": "String",
          },
        },
      },
    },
  },
  "sourceCode": undefined,
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer compile file locally 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "src:6:77: Error: Expected token Semicolon got 'RBrace'
{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }
                                                                            ^
",
  "sourceCode": undefined,
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer create new tab 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 1,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "sourceCode": Object {
    "text": "",
    "title": "Main2.sol",
  },
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
    Object {
      "text": Object {
        "text": "",
        "title": "Main2.sol",
      },
      "title": "New File.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer on tab change with isRemoveTab value false 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 1,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "sourceCode": "",
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
    Object {
      "text": "",
      "title": "Main2.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer on tab change with isRemoveTab value true 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "sourceCode": "",
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
    Object {
      "text": "",
      "title": "Main2.sol",
    },
  ],
}
`;

exports[`CodeEditor: reducer remove tab at index 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": true,
  "lastTabSelected": 0,
  "localCompileException": "",
  "sourceCode": undefined,
  "tab": Array [],
}
`;

exports[`CodeEditor: reducer set initial state 1`] = `
Object {
  "abi": undefined,
  "codeCompileSuccess": undefined,
  "codeType": "SolidVM",
  "contractName": undefined,
  "createDisabled": true,
  "currentTabSelected": 0,
  "enableCreateAction": false,
  "fileName": undefined,
  "isRemoveTab": false,
  "lastTabSelected": 0,
  "localCompileException": "",
  "sourceCode": undefined,
  "tab": Array [
    Object {
      "text": "",
      "title": "Main.sol",
    },
  ],
}
`;
